# venddelo-ai

./: .env.example  .gitignore  COMMIT_FORMAT.md  FIRESTORE_SCHEMA_SUPPLIERS_CATALOG.md  README.md  REPORTE_CLIENTE_M2_M3.html  docker-compose.yml  package.json
backend/: .dockerignore  .env.docker.example  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/api/: cache_helpers.py  deps.py
backend/app/core/: ai_gateway.py  cache.py  config.py  errors.py  exceptions.py  idempotency.py  logging.py  pagination.py  palettes.py  rate_limit.py  request_context.py  security.py  storage.py
backend/app/db/: base.py  session.py  uow.py
backend/app/middleware/: rate_limit.py
backend/data/: digital_menu_themes.json
backend/docs/: assistant-chat-streaming.md  assistant-load-skill-integration.md  menu-import-onboarding.md
backend/migrations/: env.py
backend/scripts/: entrypoint.sh  seed.py  sync_digital_menu_themes.py  verify_supabase.py
backend/tests/: conftest.py  test_ai_gateway.py  test_auth.py  test_composite_idempotency.py  test_config.py  test_config_db.py  test_db_base.py  test_db_url.py  test_errors.py  test_health.py  test_health_service.py  test_idempotency.py  test_image_factory.py  test_llm_factory.py  test_llm_tracing.py  test_logging.py  test_menu_cache.py  test_models.py  test_openai_provider.py  test_pagination.py  test_redis.py  test_request_context.py  test_storage_supabase.py  test_uow.py  test_vision_factory.py
src/: App.tsx  (+1 more)
(+1054 files in other folders)
