[project]
name = "venddelo-ai-backend"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
# Alembic-generated migration scripts are not hand-formatted.
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI uses function calls (Depends/Query/...) in argument defaults by design.
ignore = ["B008"]

[tool.black]
line-length = 100
target-version = ["py312"]
extend-exclude = "migrations/"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
